--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   border: 2px solid black;
   padding: 5px;
   margin-bottom: 10px;
+  position: relative;
 }
 
 .select-lang {
@@ -47,8 +48,64 @@
   cursor: pointer;
 }
 
+.swap-icon {
+  position: absolute;
+  top: 92%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  width: 40px;
+}
+
+.translate-btn {
+  background-color: darkgrey;
+  color: black;
+  font-weight: 700;
+  font-size: 20px;
+  border-radius: 10px;
+  padding: 10px;
+  cursor: pointer;
+  margin: 10px;
+  border: 4px solid rgb(80, 80, 80);
+}
+
+.translate-btn:hover {
+  background-color: rgb(80, 80, 80);
+  color: white;
+}
+
+.char-count-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+
+.paste-icon {
+  position: absolute;
+  top: 6%;
+  left: 47%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  font-size: 30px;
+}
+
 @media screen and (max-width: 768px) {
   .inputs {
     flex-direction: column;
+  }
+
+  .swap-icon {
+    top: 47%;
+    left: 94%;
+    width: 24px;
+  }
+
+  .paste-icon {
+    top: 3%;
+    left: 90%;
+    width: 24px;
   }
 }
