--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,15 @@
   font-size: 30px;
 }
 
+.input-area {
+  width: 300px;
+  height: 300px;
+  font-size: 20px;
+  font-family: sans-serif;
+  padding: 10px;
+  resize: none;
+}
+
 @media screen and (max-width: 768px) {
   .inputs {
     flex-direction: column;
